--- a/packages/emailo/styles/partials/typography.css
+++ b/packages/emailo/styles/partials/typography.css
@@ -4,7 +4,13 @@
       @apply my-3 first:mt-0 last:mb-0;
     }
 
-    & > p {
+    & > p,
+    & > h1,
+    & > h2,
+    & > h3,
+    & > h4,
+    & > h5,
+    & > h6 {
       @apply my-6 first:mt-0 last:mb-0;
     }
 
@@ -39,18 +45,6 @@
     h5,
     h6 {
       @apply font-bold first:mt-0 last:mb-0;
-    }
-
-    h1,
-    h2,
-    h3 {
-      @apply mt-12;
-    }
-
-    h4,
-    h5,
-    h6 {
-      @apply mt-8;
     }
 
     mark {
